// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component renders a number input 1`] = `
._eSQMtF._eSQMtF._eSQMtF._eSQMtF._eSQMtF._eSQMtF:disabled {
  cursor: not-allowed;
}

._atDza._atDza._atDza._atDza._atDza._atDza:disabled {
  color: var(--colors-tonal700);
}

._fQdilh._fQdilh._fQdilh._fQdilh._fQdilh._fQdilh:disabled {
  background-color: var(--colors-tonal300);
}

._cuMEHZ._cuMEHZ._cuMEHZ._cuMEHZ:focus {
  outline: none;
}

._fsZzKT._fsZzKT._fsZzKT._fsZzKT:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
}

._cqAMVP._cqAMVP._cqAMVP._cqAMVP:focus {
  border-left-color: var(--colors-primary900);
}

._iSyhvT._iSyhvT._iSyhvT._iSyhvT:focus {
  border-bottom-color: var(--colors-primary900);
}

._jDatdc._jDatdc._jDatdc._jDatdc:focus {
  border-right-color: var(--colors-primary900);
}

._dyCacD._dyCacD._dyCacD._dyCacD:focus {
  border-top-color: var(--colors-primary900);
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._dmGTUL {
  transition-duration: 100ms;
}

._eaYTuA {
  transition-property: all;
}

._jpQaAF {
  padding-left: var(--space-3);
}

._kjfgpN {
  padding-bottom: var(--space-3);
}

._ejjNCC {
  padding-right: var(--space-3);
}

._fcMdVB {
  padding-top: var(--space-3);
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._iGHkTP {
  display: block;
}

._fYMrRD {
  cursor: text;
}

._dFQJLr {
  color: var(--colors-tonal900);
}

._eSAGHE {
  box-sizing: border-box;
}

._jQbljM {
  box-shadow: none;
}

._gpXcaM {
  border-bottom-right-radius: var(--radii-0);
}

._pLtwA {
  border-top-right-radius: var(--radii-0);
}

._cSbnDL {
  border-top-left-radius: var(--radii-0);
}

._dEFdBr {
  border-bottom-left-radius: var(--radii-0);
}

._gTvwgM {
  border-left-color: var(--colors-tonal500);
}

._gCPJGA {
  border-bottom-color: var(--colors-tonal500);
}

._fkMoMT {
  border-right-color: var(--colors-tonal500);
}

._bWucow {
  border-top-color: var(--colors-tonal500);
}

._fsNLp {
  border-left-style: solid;
}

._iyDEp {
  border-bottom-style: solid;
}

._jClUIq {
  border-right-style: solid;
}

._bKudwR {
  border-top-style: solid;
}

._dFXvMo {
  border-left-width: 1px;
}

._dICIiI {
  border-bottom-width: 1px;
}

._bxAjFr {
  border-right-width: 1px;
}

._itFHCM {
  border-top-width: 1px;
}

._fAMvjM {
  appearance: none;
}

._Fgykb {
  margin-top: auto;
}

._bVZaHo {
  margin-right: auto;
}

._kSJetr {
  margin-bottom: auto;
}

._jbMiSP {
  margin-left: auto;
}

._SOQhS {
  height: 100px;
}

._ffzcdL {
  width: 100px;
}

<div>
  <input
    class="_ffzcdL _SOQhS _jbMiSP _kSJetr _bVZaHo _Fgykb _fAMvjM _itFHCM _bxAjFr _dICIiI _dFXvMo _bKudwR _jClUIq _iyDEp _fsNLp _bWucow _fkMoMT _gCPJGA _gTvwgM _dEFdBr _cSbnDL _pLtwA _gpXcaM _jQbljM _eSAGHE _dFQJLr _fYMrRD _iGHkTP _oIZSq _dIHnma _fcMdVB _ejjNCC _kjfgpN _jpQaAF _eaYTuA _dmGTUL _kKqLFw _dyCacD _jDatdc _iSyhvT _cqAMVP _fsZzKT _cuMEHZ _fQdilh _atDza _eSQMtF scid-eUDxwx"
    inputmode="numeric"
    pattern="[0-9]*"
    placeholder="001"
    type="text"
  />
</div>
`;

exports[`Input component renders a text input 1`] = `
._eSQMtF._eSQMtF._eSQMtF._eSQMtF._eSQMtF._eSQMtF:disabled {
  cursor: not-allowed;
}

._atDza._atDza._atDza._atDza._atDza._atDza:disabled {
  color: var(--colors-tonal700);
}

._fQdilh._fQdilh._fQdilh._fQdilh._fQdilh._fQdilh:disabled {
  background-color: var(--colors-tonal300);
}

._cuMEHZ._cuMEHZ._cuMEHZ._cuMEHZ:focus {
  outline: none;
}

._fsZzKT._fsZzKT._fsZzKT._fsZzKT:focus {
  box-shadow: inset 0 0 0 1px var(--colors-primary900);
}

._cqAMVP._cqAMVP._cqAMVP._cqAMVP:focus {
  border-left-color: var(--colors-primary900);
}

._iSyhvT._iSyhvT._iSyhvT._iSyhvT:focus {
  border-bottom-color: var(--colors-primary900);
}

._jDatdc._jDatdc._jDatdc._jDatdc:focus {
  border-right-color: var(--colors-primary900);
}

._dyCacD._dyCacD._dyCacD._dyCacD:focus {
  border-top-color: var(--colors-primary900);
}

._kKqLFw {
  transition-timing-function: ease-out;
}

._dmGTUL {
  transition-duration: 100ms;
}

._eaYTuA {
  transition-property: all;
}

._jpQaAF {
  padding-left: var(--space-3);
}

._kjfgpN {
  padding-bottom: var(--space-3);
}

._ejjNCC {
  padding-right: var(--space-3);
}

._fcMdVB {
  padding-top: var(--space-3);
}

._dIHnma {
  font-size: var(--fontSizes-md);
}

._oIZSq {
  font-family: var(--fonts-sans);
}

._iGHkTP {
  display: block;
}

._fYMrRD {
  cursor: text;
}

._dFQJLr {
  color: var(--colors-tonal900);
}

._eSAGHE {
  box-sizing: border-box;
}

._jQbljM {
  box-shadow: none;
}

._gpXcaM {
  border-bottom-right-radius: var(--radii-0);
}

._pLtwA {
  border-top-right-radius: var(--radii-0);
}

._cSbnDL {
  border-top-left-radius: var(--radii-0);
}

._dEFdBr {
  border-bottom-left-radius: var(--radii-0);
}

._gTvwgM {
  border-left-color: var(--colors-tonal500);
}

._gCPJGA {
  border-bottom-color: var(--colors-tonal500);
}

._fkMoMT {
  border-right-color: var(--colors-tonal500);
}

._bWucow {
  border-top-color: var(--colors-tonal500);
}

._fsNLp {
  border-left-style: solid;
}

._iyDEp {
  border-bottom-style: solid;
}

._jClUIq {
  border-right-style: solid;
}

._bKudwR {
  border-top-style: solid;
}

._dFXvMo {
  border-left-width: 1px;
}

._dICIiI {
  border-bottom-width: 1px;
}

._bxAjFr {
  border-right-width: 1px;
}

._itFHCM {
  border-top-width: 1px;
}

._fAMvjM {
  appearance: none;
}

._Fgykb {
  margin-top: auto;
}

._bVZaHo {
  margin-right: auto;
}

._kSJetr {
  margin-bottom: auto;
}

._jbMiSP {
  margin-left: auto;
}

._SOQhS {
  height: 100px;
}

._ffzcdL {
  width: 100px;
}

<div>
  <input
    class="_ffzcdL _SOQhS _jbMiSP _kSJetr _bVZaHo _Fgykb _fAMvjM _itFHCM _bxAjFr _dICIiI _dFXvMo _bKudwR _jClUIq _iyDEp _fsNLp _bWucow _fkMoMT _gCPJGA _gTvwgM _dEFdBr _cSbnDL _pLtwA _gpXcaM _jQbljM _eSAGHE _dFQJLr _fYMrRD _iGHkTP _oIZSq _dIHnma _fcMdVB _ejjNCC _kjfgpN _jpQaAF _eaYTuA _dmGTUL _kKqLFw _dyCacD _jDatdc _iSyhvT _cqAMVP _fsZzKT _cuMEHZ _fQdilh _atDza _eSQMtF scid-eUDxwx"
    placeholder="INPUT"
    type="text"
  />
</div>
`;
